--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -498,7 +498,7 @@
                                     <!-- Profile Photo Section -->
                                         <div class="account-photo">
                                             <!-- 当前头像 -->
-                                            <img id="avatar" src="../static/images/chiikawa.jpg" alt="User Photo">
+                                            <img id="avatar" src="avatar_url" alt="User Photo">
                                             <!-- 修改头像按钮 -->
                                             <button type="button" id="changeAvatarBtn" class="btn btn-secondary"
                                                     data-toggle="modal" data-target="#avatarModal">
@@ -693,6 +693,7 @@
             const doneBtn = document.getElementById('doneBtn');
             const fileInput = document.getElementById('avatarFileInput');
             const preview = document.getElementById('avatarPreview');
+            const avatar = document.getElementById('avatar');
 
             // 点击选择图片按钮触发文件选择框
             chooseImageBtn.addEventListener('click', function () {
@@ -734,7 +735,7 @@
                 .then(data => {
                     if (data.message === 'Avatar uploaded successfully') {
                         alert("Avatar updated successfully!");
-                        document.getElementById('avatar').src = data.avatar_url; // 更新头像预览
+                        avatar.src = `/${data.avatar_url}`; // 更新头像显示
                     } else {
                         alert(data.message || "Failed to update avatar.");
                     }
@@ -749,19 +750,17 @@
 
     <script>
         // 页面加载时，获取用户信息
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             // 发起请求获取用户信息
             fetch('/get_user_info')
                 .then(response => response.json())
                 .then(data => {
-                    if (data.message) {
-                        // 如果用户未找到，显示错误信息
-                        alert(data.message);
-                    } else {
-                        // 更新前端页面，显示用户的详细信息
+                    if (data.is_logged_in) {
                         document.getElementById('user-name').innerText = data.name;
                         document.getElementById('user-email').innerText = data.email;
-                        document.getElementById('avatar').src = data.avatar ? `../static/images/${data.avatar}` : '../static/images/chiikawa.jpg';
+                        document.getElementById('avatar').src = `/${data.avatar}`; // 更新头像路径
+                    } else {
+                        alert('Failed to load user information.');
                     }
                 })
                 .catch(error => {
