--- a/code/templates/useful-skills.html
+++ b/code/templates/useful-skills.html
@@ -23,7 +23,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>HerBlossom</span></h4>
+                    <h4><span>Her</span>Blossom</h4>
                 </div>
             </div>
             <h2 class="head">WELCOME GIRLS!</h2>
@@ -32,11 +32,13 @@
     </div>
     <div class="body_wrapper">
         <nav class="navbar navbar-expand-lg menu_two" id="sticky">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="../static/img/logo.png" srcset="../static/img/logo-2x.png 2x" alt="logo">
-                </a>
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <a class="navbar-brand" href="/index">
+                <img src="../static/img/logo.png" srcset="../static/img/logo-2x.png 2x" alt="logo">
+            </a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="menu_toggle">
                         <span class="hamburger">
                             <span></span>
@@ -48,10 +50,10 @@
                             <span></span>
                         </span>
                     </span>
-                </button>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav menu dk_menu ml-auto">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav menu ml-auto">
                         <li class="nav-item dropdown submenu">
                             <a href="/index" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Home</a>
@@ -72,7 +74,7 @@
                                aria-haspopup="true" aria-expanded="false">Blog</a>
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                            <a href="/job-recommendation" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
@@ -82,45 +84,27 @@
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
-                                    <a href="doc-archive.html" class="nav-link">
+                                    <a href="contact.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>HerBlossom</h5>
-                                            <p>Launch Simple Websites</p>
+                                            <h5>Contact Us</h5>
+                                            <p>Send your feedback here!</p>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="doclist.html" class="nav-link">
+                                    <a href="/about-us" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
-                                            <h5>docall</h5>
-                                            <p>Digital Assets Subscription</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="index.html" class="nav-link">
-                                        <img src="../static/img/shopping-bag.png" alt="">
-                                        <div class="text">
-                                            <h5>Docenvato</h5>
-                                            <p>Tutorials & Courses</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="index.html" class="nav-link">
-                                        <img src="../static/img/gear.png" alt="">
-                                        <div class="text">
-                                            <h5>Tools</h5>
-                                            <p>Hire a Freelancer</p>
+                                            <h5>About Us</h5>
+                                            <p>Want to know more about<br>QUEENs NEVER CRY?</p>
                                         </div>
                                     </a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn" href="#">Free Trail</a>
+                    <a class="nav_btn" href="/signin" id="auth-button">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -132,11 +116,11 @@
                     <div class="single_post_author">
                         <img class="author_img" src="../static/img/blog-grid/logo.jpg" alt="">
                         <div class="text">
-                            <a href="#"><h4>HerBlossom</h4></a>
+                            <a><h4>HerBlossom</h4></a>
                             <div class="post_tag">
-                                <a href="#">April 8, 2025</a>
-                                <a href="#">18 Min Read</a>
-                                <a class="c_blue" href="#">Skills</a>
+                                <a>April 8, 2025</a>
+                                <a>18 Min Read</a>
+                                <a class="c_blue">Skills</a>
                             </div>
                         </div>
                     </div>
@@ -452,81 +436,90 @@
                 </div>
             </div>
         </section>
-        <footer class="footer_area f_bg_color">
+        <footer class="footer_area footer_p_top f_bg_color">
             <img class="p_absolute leaf" src="../static/img/v.svg" alt="">
-            <img class="p_absolute f_man wow fadeInRight" data-wow-delay="0.6s" src="../static/img/home_two/f_man.png" alt="">
+            <img class="p_absolute f_man wow fadeInLeft" data-wow-delay="0.4s" src="../static/img/home_two/f_man.png"
+                 alt="">
             <img class="p_absolute f_cloud" src="../static/img/home_two/cloud.png" alt="">
             <img class="p_absolute f_email" src="../static/img/home_two/email-icon.png" alt="">
             <img class="p_absolute f_email_two" src="../static/img/home_two/email-icon_two.png" alt="">
-            <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.3s" src="../static/img/home_two/man.png" alt="">
+            <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.2s" src="../static/img/home_two/man.png"
+                 alt="">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 col-sm-6">
                             <div class="f_widget subscribe_widget wow fadeInUp">
-                                <a href="index.html" class="f_logo"><img src="../static/img/logo.png" alt=""></a>
+                                <a href="/index" class="f_logo"><img src="../static/img/logo.png" alt=""></a>
                                 <h4 class="c_head">Subscribe to our newsletter</h4>
                                 <form action="#" class="footer_subscribe_form">
                                     <input type="email" placeholder="Email" class="form-control">
                                     <button type="submit" class="s_btn">Send</button>
                                 </form>
                                 <ul class="list-unstyled f_social_icon">
-                                    <li><a href="#"><i class="social_facebook"></i></a></li>
-                                    <li><a href="#"><i class="social_twitter"></i></a></li>
-                                    <li><a href="#"><i class="social_vimeo"></i></a></li>
-                                    <li><a href="#"><i class="social_linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/"><i class="social_facebook"></i></a></li>
+                                    <li><a href="https://www.x.com/"><i class="social_twitter"></i></a></li>
+                                    <li><a href="https://vimeo.com/"><i class="social_vimeo"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/"><i class="social_linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
+
+
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
+                                <h3 class="f_title">HerBlossom Pages</h3>
+                                <ul class="list-unstyled link_list">
+                                    <li><a href="/index">Home</a></li>
+                                    <li><a href="/signin">Sign In</a></li>
+                                    <li><a href="/blog">Blog</a></li>
+                                    <li><a href="/forum">Forum</a></li>
+                                    <li><a href="/job-recommendation">Job Recommendation</a></li>
+
+                                    <!--                                <li><a href="changelog.html">Changelog</a></li>-->
+                                    <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+                                    <!--                                <li><a href="#">Conversion Tracking</a></li>-->
+                                    <!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-2 col-sm-6">
+                            <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
+                                <h3 class="f_title">Blog</h3>
+                                <ul class="list-unstyled link_list">
+                                    <li><a href="/blog">Blog</a></li>
+                                    <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                    <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                    <li><a href="/blog-category/Others">Others</a></li>
+                                    <!--                                <li><a href="#">Image Lightbox</a></li>-->
+                                    <!--                                <li><a href="#">iOS & Android</a></li>-->
+                                    <!--                                <li><a href="#">Messages</a></li>-->
+                                </ul>
+                            </div>
+                        </div>
+
                         <div class="col-lg-3 col-sm-6">
                             <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                                 <h3 class="f_title">Company</h3>
                                 <ul class="list-unstyled link_list">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Testimonials</a></li>
-                                    <li><a href="#">Affiliates</a></li>
-                                    <li><a href="#">Partners</a></li>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">HerBlossom for Good</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="/about-us">About Us</a></li>
+                                    <li><a href="/contact-us">Contact Us</a></li>
+
+                                    <!--                                <li><a href="#">Careers</a></li>-->
+                                    <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+                                    <!--                                <li><a href="#">Contact Us</a></li>-->
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-sm-6">
-                            <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
-                                <h3 class="f_title">Support</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="index-3.html">Help Desk</a></li>
-                                    <li><a href="#">Knowledge Base</a></li>
-                                    <li><a href="#">Live Chat</a></li>
-                                    <li><a href="#">Integrations</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">iOS & Android</a></li>
-                                    <li><a href="#">Messages</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
-                                <h3 class="f_title">Doc Pages</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="doclist.html">Doc Topic</a></li>
-                                    <li><a href="#">Free Training</a></li>
-                                    <li><a href="doc-archive.html">Doc Archive</a></li>
-                                    <li><a href="changelog.html">Changelog</a></li>
-                                    <li><a href="Onepage.html">Onepage Docs</a></li>
-                                    <li><a href="#">Conversion Tracking</a></li>
-                                    <li><a href="cheatsheet.html">Cheatseet</a></li>
-                                </ul>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="border_bottom"></div>
                 </div>
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved By <a href="http://www.bootstrapmb.com/">bootstrapmb</a></p>
+                    <p>© 2025 All Rights Reserved by <a href="/index">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
