--- a/code/templates/useful-skills.html
+++ b/code/templates/useful-skills.html
@@ -26,8 +26,8 @@
                     <h4><span>Her</span>Blossom</h4>
                 </div>
             </div>
-            <h2 class="head">WELCOME GIRLS!</h2>
-            <p></p>
+            <h2 class="head">KNOWLEDGE EMPOWER YOU</h2>
+            <p>Power come from yourself. You get your back!</p>
         </div>
     </div>
     <div class="body_wrapper">
