--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -33,12 +33,11 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h2 class="head">READY TO SWITCH TO OTHER MODE?</h2>
-                    <p>Refresh yourself and embrace the new you!</p>
+                    <h4><span>Her</span>Blossom</h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
-            <p></p>
+            <h2 class="head">READY TO SWITCH TO OTHER MODE?</h2>
+            <p>Refresh yourself and embrace the new you!</p>
         </div>
     </div>
     
