--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                             <div class="comment_inner">
-                                <h2 class="c_head">3 Comment</h2>
+                                <h2 class="c_head">4 Comments</h2>
                                 <ul class="comment_box list-unstyled">
                                     <li class="post_comment">
                                         <div class="media comment_author">
@@ -313,13 +313,13 @@
                                 </div>
                             </div>
                             <div class="widget tag_widget">
-                                <h4 class="c_head">Tags</h4>
+                                <h4 class="c_head">Trends</h4>
                                 <ul class="list-unstyled w_tag_list">
-                                    <li><a href="#">Design</a></li>
-                                    <li><a href="#">Apps</a></li>
-                                    <li><a href="#">Photography</a></li>
-                                    <li><a href="#">Business</a></li>
-                                    <li><a href="#">HerBlossom</a></li>
+                                    <li><a href="https://travel.usnews.com/rankings/best-summer-vacations/">Vacation</a></li>
+                                    <li><a href="/life-skills">Skills</a></li>
+                                    <li><a href="https://open.spotify.com/">Music</a></li>
+                                    <li><a href="/forum">Forum</a></li>
+                                    <li><a href="/about-us">HerBlossom</a></li>
                                 </ul>
                             </div>
                         </div>
