--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -420,7 +420,7 @@ font-family: 'Dancing Script', cursive;
                         </nav>
                     </div>
                     <div class="col-sm-5">
-                        <span class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</span>
+                        <span class="date"><i class="icon_clock_alt"></i>/span>
                     </div>
                 </div>
             </div>
