--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -238,10 +238,12 @@
                             <div class="form-group">
                                 <label for="post-category">Category</label>
                                 <select id="post-category" class="form-control">
-                                    <option value="General">General</option>
-                                    <option value="Bug">Bug</option>
-                                    <option value="Feature">Feature</option>
-                                    <option value="Error">Error</option>
+                                <option value="General">General</option>
+                                    <option value="Life">Life</option>
+                                    <option value="Study">Study</option>
+                                    <option value="Work">Work</option>
+                                    <option value="Emotion">Emotion</option>
+                                    <option value="Help">Help</option>
                                 </select>
                             </div>
 
